# egui-keybinds

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
examples/basic/: Cargo.toml  main.rs
src/: helper.rs  keycodes.rs  lib.rs  main.rs  widget.rs
src/keybind/: mod.rs  widget.rs
