[package]
name = "egui-keybinds"
version = "1.1.3"
repository = "https://github.com/TheRacc2/egui-keybinds"
edition = "2021"
description = "Adds a keybind system to egui"
keywords = ["egui", "input", "keyboard", "keybind"]
categories = ["gui"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
egui-modal = "0.2.2"
device_query = "1.1.2"
once_cell = "1.17.1"
