[package]
name = "egui-keybinds"
version = "3.3.8"
repository = "https://github.com/TheRacc2/egui-keybinds"
edition = "2021"
description = "keybinding system developed for EGUI"
keywords = ["egui", "input", "keyboard", "keybind", "bind"]
categories = ["gui"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
device_query = "1.1.2"
once_cell = "1.17.1"
